umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_ovjtools_VitaminB12.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 180
bond_count: 191
sum_formula: C63H87CoN14O14P-2
graph6: "~?AshCGGC@?G?_@?A?A??G?@??C??G??G??O??@??@????o??@???A_???????I????O??????A????@?????@?G?????C?????????_????@G??@????CC???CG????c??????????O?????C??????C??????O????????@?????G?????????_??????G???????C?????O???????_???????C?????????{?????????C??????G???????????O????????@@?????????G????????????????_??????????A??????????_?????????G?????????@??????????C??????????G?????????A???????????O??????????@???????????G??????????@???????????C???????????A????????????_???????????G???????????C????????????K???????????@?????????????_????????????C??????????????????????????G?????????????_????????????@?????????????G?????????????@_???????@?????O???????????@?A??????????????K?????????????O??????????????O??????G???????????C?????????????O?????????????@???????????????????????O???????????????_???????????????O???????????????G???????????????@????????????????G????????????????O????????????????_????????????????C????????????????A??????????????????G???????????????????G????O?????????????????C?????????????????A??????????????????A??????????????????G?????????????????@??????????????????C??????????????????C??????????????????C??????????????????A???????????????????G???????????????????O???????????????????O???????????????????_???????????????????O???????????????????G???????????????????@????????????????????G????????????????????A????????????????????C????????????????????C????????????????????@?????????????????????O????????????????????@?????????????????????C?????????????????????C?????????????????????C?????????????????????A??????????????????????O?????????????????????A???????????????????????_?????????????????????@???????????????????????_??????????????????????O??????????????????????A???????????????????????O??????????????????????????A???????????????????????C???????????????????????C???????????????????????@????????????????????????O????????????????????????_???????????????????????A?????????????????????????_????????????????????????_????????????????????????G????????????????????????@?????????????????????????G?????????????????????????_??????????????????????????_?????????????????????????O?????????????????????????C??????????????????????????_??????????????????????????_?????????????????????????A??????????????????????????@???????????????????????????G???????????????????????????G??????????????????????????@???????????????????????????G???????????????????????????_???????????????????????????_???????????????????????????_???????????????????????????O???????????????????????????@????????????????????????????G????????????????????????????_????????????????????????????O????????????????????????????O????????????????????????????G????????????????????????????C?????????????????????????????_????????????????????????????A??????????????"
