umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_1oir.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 34
sum_formula: C23N6O2
graph6: ^hEGGOB?GC?@?@??_?G?P??G??G??G??C??@???G??G_??C???@????_???G???@????C????O???A?
