umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_Issue242-2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 23
bond_count: 26
sum_formula: C19N3O
graph6: ViCGGC@AG_?@?A??_?G?@G?c??O??G??C??@???G??G_
