umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_rdkit_Issue268_Mol2.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 34
sum_formula: C23N6O2
graph6: ^hCGGC@?G?_P?C??_?G?@??C??G??G??C??H???G???_??@???P??@???A?????@??O?CO???A?????
